--- a/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
+++ b/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Smartiks.Framework.Identity.Data.Abstractions</PackageId>
+    <Description>Smartiks.Framework.Identity.Data.Abstractions</Description>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
-    <Description>Smartiks.Framework.IO.Excel.Extensions</Description>
-    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Smartiks.Framework.IO.Excel.Abstractions\Smartiks.Framework.IO.Excel.Abstractions.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.0.4" />
   </ItemGroup>
 
 </Project>
