--- a/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
+++ b/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
@@ -7,6 +7,7 @@
     <Description>Smartiks.Framework.Identity.Data.Abstractions</Description>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
+    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
