--- a/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
+++ b/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
@@ -6,6 +6,7 @@
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Identity.Data</Description>
+    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
