Excel export format fixed

--- a/src/Smartiks.Framework.IO.Excel.Abstractions/Smartiks.Framework.IO.Excel.Abstractions.csproj
+++ b/src/Smartiks.Framework.IO.Excel.Abstractions/Smartiks.Framework.IO.Excel.Abstractions.csproj
@@ -8,6 +8,7 @@
     <Description>Smartiks.Framework.IO.Excel.Abstractions</Description>
     <Product>Smartiks.Framework.IO.Excel.Abstractions</Product>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
