--- a/src/Smartiks.Framework.IO.Excel.Extensions/Smartiks.Framework.IO.Excel.Extensions.csproj
+++ b/src/Smartiks.Framework.IO.Excel.Extensions/Smartiks.Framework.IO.Excel.Extensions.csproj
@@ -7,6 +7,9 @@
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.IO.Excel.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
