--- a/src/Smartiks.Framework.Text.Abstractions/Smartiks.Framework.Text.Abstractions.csproj
+++ b/src/Smartiks.Framework.Text.Abstractions/Smartiks.Framework.Text.Abstractions.csproj
@@ -5,6 +5,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl></RepositoryUrl>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <Authors>Murat Atay</Authors>
+    <Company>Smartiks</Company>
+    <Product>Smartiks.Framework.Text.Abstractions</Product>
+    <Description>Smartiks.Framework.Text.Abstractions</Description>
   </PropertyGroup>
 
 </Project>
