--- a/src/Smartiks.Framework.Text/Smartiks.Framework.Text.csproj
+++ b/src/Smartiks.Framework.Text/Smartiks.Framework.Text.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl></RepositoryUrl>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <Version>2.0.0</Version>
+    <Authors>Murat Atay</Authors>
+    <Company>Smartiks</Company>
+    <Product>Smartiks.Framework.Text</Product>
+    <Description>Smartiks.Framework.Text</Description>
   </PropertyGroup>
 
   <ItemGroup>
