--- a/src/Smartiks.Framework.IO.Excel.Abstractions/Smartiks.Framework.IO.Excel.Abstractions.csproj
+++ b/src/Smartiks.Framework.IO.Excel.Abstractions/Smartiks.Framework.IO.Excel.Abstractions.csproj
@@ -8,7 +8,8 @@
     <Description>Smartiks.Framework.IO.Excel.Abstractions</Description>
     <Product>Smartiks.Framework.IO.Excel.Abstractions</Product>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
-    <Version>1.1.0</Version>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
 </Project>
