--- a/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
+++ b/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
@@ -10,8 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.0.4" />
+    <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
