--- a/src/Smartiks.Framework.Identity.Authentication.Owin.Extensions/Smartiks.Framework.Identity.Authentication.Owin.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Authentication.Owin.Extensions/Smartiks.Framework.Identity.Authentication.Owin.Extensions.csproj
@@ -7,6 +7,7 @@
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Identity.Authentication.Owin.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
