--- a/src/Smartiks.Framework.Identity.Authentication.Web.Extensions/Smartiks.Framework.Identity.Authentication.Web.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Authentication.Web.Extensions/Smartiks.Framework.Identity.Authentication.Web.Extensions.csproj
@@ -7,6 +7,7 @@
     <Description>Smartiks.Framework.Identity.Authentication.Web.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
