--- a/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
+++ b/src/Smartiks.Framework.Identity.Data.Abstractions/Smartiks.Framework.Identity.Data.Abstractions.csproj
@@ -8,6 +8,9 @@
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
