--- a/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Murat Atay</Authors>
+    <Company>Smartiks</Company>
+    <Product>Smartiks.Framework.Identity.Server.Extensions</Product>
+    <Description>Smartiks.Framework.Identity.Server.Extensions</Description>
+    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
