--- a/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
+++ b/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Data.EntityFramework</Description>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
