--- a/src/Smartiks.Framework.Data.Web/Smartiks.Framework.Data.Web.csproj
+++ b/src/Smartiks.Framework.Data.Web/Smartiks.Framework.Data.Web.csproj
@@ -7,6 +7,7 @@
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Data.Web</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
