--- a/src/Smartiks.Framework.IO.Excel/Smartiks.Framework.IO.Excel.csproj
+++ b/src/Smartiks.Framework.IO.Excel/Smartiks.Framework.IO.Excel.csproj
@@ -1,16 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
-    <Product>Smartiks.Framework.IO.Excel</Product>
-    <Description>Smartiks.Framework.IO.Excel</Description>
     <Company>Smartiks</Company>
-    <Version>2.0.1</Version>
-    <AssemblyVersion>2.0.1.0</AssemblyVersion>
-    <FileVersion>2.0.1.0</FileVersion>
+    <Description>Smartiks.Framework.IO.Excel</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <Version>2.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
