--- a/src/Smartiks.Framework.Identity.Authentication.Web.Extensions/Smartiks.Framework.Identity.Authentication.Web.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Authentication.Web.Extensions/Smartiks.Framework.Identity.Authentication.Web.Extensions.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Identity.Authentication.Web.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Version>1.1.0</Version>
   </PropertyGroup>
 
