--- a/src/Smartiks.Framework.Identity.Server.Abstractions/Smartiks.Framework.Identity.Server.Abstractions.csproj
+++ b/src/Smartiks.Framework.Identity.Server.Abstractions/Smartiks.Framework.Identity.Server.Abstractions.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
-    <Product>Smartiks.Framework.Identity.Server.Abstractions</Product>
     <Description>Smartiks.Framework.Identity.Server.Abstractions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Version>1.1.0</Version>
   </PropertyGroup>
 
