--- a/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
@@ -5,9 +5,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
-    <Product>Smartiks.Framework.Identity.Server.Extensions</Product>
     <Description>Smartiks.Framework.Identity.Server.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
     <Version>1.1.1</Version>
   </PropertyGroup>
 
