--- a/src/Smartiks.Framework.Text.Abstractions/Smartiks.Framework.Text.Abstractions.csproj
+++ b/src/Smartiks.Framework.Text.Abstractions/Smartiks.Framework.Text.Abstractions.csproj
@@ -1,14 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <RepositoryUrl></RepositoryUrl>
-    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
-    <Product>Smartiks.Framework.Text.Abstractions</Product>
     <Description>Smartiks.Framework.Text.Abstractions</Description>
+    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
+    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
   </PropertyGroup>
 
 </Project>
