Ignore package creation on example and test projects

--- a/examples/Smartiks.Framework.Identity.Authentication.Owin.App/Smartiks.Framework.Identity.Authentication.Owin.App.csproj
+++ b/examples/Smartiks.Framework.Identity.Authentication.Owin.App/Smartiks.Framework.Identity.Authentication.Owin.App.csproj
@@ -23,8 +23,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <UseGlobalApplicationHostFile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
