--- a/src/Smartiks.Framework.Identity.Authentication.Owin.Extensions/Smartiks.Framework.Identity.Authentication.Owin.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Authentication.Owin.Extensions/Smartiks.Framework.Identity.Authentication.Owin.Extensions.csproj
@@ -2,13 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Murat Atay</Authors>
-    <Company>Smartiks</Company>
-    <Description>Smartiks.Framework.Identity.Authentication.Owin.Extensions</Description>
-    <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
-    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
-    <Version>1.1.0</Version>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
