--- a/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
+++ b/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
@@ -7,7 +7,7 @@
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Data.EntityFramework</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
-    <PackageLicenseUrl>https://opensource.org/licenses/MIT</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
