--- a/src/Smartiks.Framework.Data.Web/Smartiks.Framework.Data.Web.csproj
+++ b/src/Smartiks.Framework.Data.Web/Smartiks.Framework.Data.Web.csproj
@@ -8,6 +8,7 @@
     <Description>Smartiks.Framework.Data.Web</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
