--- a/src/Smartiks.Framework.Net.Email.Abstractions/Smartiks.Framework.Net.Email.Abstractions.csproj
+++ b/src/Smartiks.Framework.Net.Email.Abstractions/Smartiks.Framework.Net.Email.Abstractions.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Murat Atay</Authors>
+    <Authors>Murat Atay;Mehmet Yasin Akar</Authors>
     <Company>Smartiks</Company>
+    <Product>Smartiks.Framework.Net.Email.Abstractions</Product>
     <Description>Smartiks.Framework.Net.Email.Abstractions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
