--- a/src/Smartiks.Framework.IO/Smartiks.Framework.IO.csproj
+++ b/src/Smartiks.Framework.IO/Smartiks.Framework.IO.csproj
@@ -10,6 +10,7 @@
     <Description>Smartiks.Framework.IO</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
 </Project>
