--- a/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
+++ b/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
@@ -2,22 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Murat Atay</Authors>
+    <Authors>Murat Atay;Mehmet Yasin Akar</Authors>
     <Company>Smartiks</Company>
+    <Product>Smartiks.Framework.Data.EntityFramework</Product>
     <Description>Smartiks.Framework.Data.EntityFramework</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.1</Version>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Smartiks.Framework.Data.Abstractions\Smartiks.Framework.Data.Abstractions.csproj" />
+    <ProjectReference Include="..\Smartiks.Framework.Data.EntityFramework.Abstractions\Smartiks.Framework.Data.EntityFramework.Abstractions.csproj" />
     <ProjectReference Include="..\Smartiks.Framework.Data.Extensions\Smartiks.Framework.Data.Extensions.csproj" />
   </ItemGroup>
 
