--- a/src/Smartiks.Framework.Data.EntityFramework.Web/Smartiks.Framework.Data.EntityFramework.Web.csproj
+++ b/src/Smartiks.Framework.Data.EntityFramework.Web/Smartiks.Framework.Data.EntityFramework.Web.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Murat Atay;Mehmet Yasin Akar</Authors>
+    <Authors>Murat Atay, Mehmet Yasin Akar</Authors>
     <Company>Smartiks</Company>
     <Product>Smartiks.Framework.Data.EntityFramework.Web</Product>
     <Description>Smartiks.Framework.Data.EntityFramework.Web</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
