Data.App fixes.

--- a/examples/Smartiks.Framework.Data.App/appsettings.json
+++ b/examples/Smartiks.Framework.Data.App/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=GURKANKESEBIR\\SQLEXPRESS;Database=SMARTIKS_DATA;Integrated Security=True;MultipleActiveResultSets=True;"
+    "DataContext": "Server=192.168.2.64;Initial Catalog=SMARTIKS_FRAMEWORK_TEST;User Id=sa;Password=Smart123!;"
   }
 }
