--- a/examples/Smartiks.Framework.Data.App/Properties/launchSettings.json
+++ b/examples/Smartiks.Framework.Data.App/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Home",
+      "launchUrl": "api/Employee",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "Smartiks.Framework.Data.App": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Home",
+      "launchUrl": "api/Employee",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
