--- a/src/Smartiks.Framework.Net.Email.Abstractions/Smartiks.Framework.Net.Email.Abstractions.csproj
+++ b/src/Smartiks.Framework.Net.Email.Abstractions/Smartiks.Framework.Net.Email.Abstractions.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Murat Atay;Mehmet Yasin Akar</Authors>
+    <Authors>Murat Atay, Mehmet Yasin Akar</Authors>
     <Company>Smartiks</Company>
     <Product>Smartiks.Framework.Net.Email.Abstractions</Product>
     <Description>Smartiks.Framework.Net.Email.Abstractions</Description>
