Smartiks.Framework.Data.App fixes

--- a/examples/Smartiks.Framework.Data.App/appsettings.json
+++ b/examples/Smartiks.Framework.Data.App/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataContext": "Server=GURKANKESEBIR\\SQLEXPRESS;Database=SMARTIKS_DATA;Integrated Security=True;MultipleActiveResultSets=True;"
+    "DataContext": "Server=(LocalDB)\\MSSQLLocalDB;Database=SMARTIKS_FRAMEWORK_DATA_TEST;Integrated Security=True;MultipleActiveResultSets=True;"
   }
 }
